Added jollof and tuna sandwich recipe pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/brownies.html">Brownies</a>
+    <a href="./recipes/jollof.html">Jollof</a>
+    <a href="./recipes/tuna-sandwich.html">Tuna Sandwich</a>
     
 </body>
 </html>
