--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://th.bing.com/th/id/OIP.ch-5sJizXiQVx1n94phEvAHaE6?w=189&h=125&c=7&r=0&o=5&dpr=2&pid=1.7" alt="brownies">
+    <img src="https://www.bing.com/th?id=AMMS_3967f942657bb683080a7e84d1b167c2&w=500&h=454&c=7&rs=1&qlt=80&o=6&cdv=1&dpr=2&pid=16.1" alt="brownies">
 
     <h2>Description</h2>
     <p>
@@ -15,17 +15,60 @@
     </p>
 
     <h2>Ingredients</h2>
+    <h3>Chicken:</h3>
     <ul>
         <li>2 pounds chicken drumsticks</li>
-        <li></li>
+        <li>½ large onion, diced</li>
+        <li>1 (2 inch) piece fresh ginger root, peeled and thinly sliced</li>
+        <li>2 cubes chicken bouillon, crushed</li>
+        <li>2 cloves garlic, diced</li>
+        <li>1 tablespoon curry powder, or more to taste</li>
+        <li>1 teaspoon herbes de Provence</li>
+        <li>freshly ground black pepper</li>
+        <li>1 pinch cayenne pepper</li>
+        <li>1 cup water</li>
+    </ul>
+    <h3>Rice:</h3>
+    <ul>
+        <li>3 tablespoons vegetable oil</li>
+        <li>½ large onion, diced</li>
+        <li>1 (14 ounce) can tomato sauce</li>
+        <li>1 (14 ounce) can coconut milk</li>
+        <li>1 teaspoon herbes de Provence</li>
+        <li>1 teaspoon salt</li>
+        <li>½ teaspoon ground black pepper, or to taste</li>
+        <li>3 cups parboiled rice (such as Uncle Ben's®)</li>
+        <li>1 (10 ounce) package frozen mixed vegetables (carrots, corn, peas)</li>
+    </ul>
+    <h3>Plantain:</h3>
+    <ul>
+        <li>4 ripe plantains, peeled and cut diagonally into 1/2-inch slices</li>
+        <li>½ cup canola oil for frying</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li>Preheat oven to 350 degrees F (175 degrees C). Lightly grease an 8-inch square baking dish.</li>
-        <li>Combine chocolate and butter in top of a double boiler over simmering water. Stir frequently, scraping down the sides with a rubber spatula to avoid scorching, until chocolate is melted, about 5 minutes. Remove from heat.</li>
-        <li>Whisk 1 cup plus 1 tablespoon sugar and vanilla extract into melted chocolate mixture. Add eggs, one at a time, mixing well after each addition. Sift 1/2 cup plus 1 tablespoon teff flour and cocoa powder over mixture and mix well until all ingredients are incorporated into a smooth batter. Pour batter into prepared baking dish.</li>
-        <li>Bake in the preheated oven until a skewer inserted into centre of brownies comes out clean, about 40 minutes. Allow to cool for 10 minutes before slicing into squares.</li>
+        <li>
+            Place chicken drumsticks in a large Dutch oven over medium heat. Add 1/2 onion, ginger, crushed bouillon cubes, garlic, curry powder, 1 teaspoon herbes de Provence, black pepper, and cayenne pepper. Mix well. Cook until chicken starts sticking to the bottom, about 5 minutes. Pour in water, mix, cover the pot, and bring to a gentle simmer; cook for 15 minutes. Remove from heat.
+        </li>
+        <li>
+            Transfer chicken to a baking dish using a slotted spoon. Strain cooking liquid through a fine-mesh sieve. Reserve 1 1/2 cups liquid. Discard solids.
+        </li>
+        <li>
+            Preheat oven to 400 degrees F (200 degrees C).
+        </li>
+        <li>
+            Bake chicken in the preheated oven until no longer pink in the middle and the juices run clear, about 30 minutes. An instant-read thermometer inserted into the thickest part should read 165 degrees F (74 degrees C).
+        </li>
+        <li>
+            Heat 3 tablespoons vegetable oil in a large pot over medium-low heat and cook 1/2 onion until soft and translucent but not browned, about 5 minutes. Add tomato sauce; cook and stir until slightly thickened and infused into the oil, 5 to 7 minutes.
+        </li>
+        <li>
+            Stir reserved chicken broth, coconut milk, 1 teaspoon herbes de Provence, salt, and pepper into the pot. Bring to a simmer; add rice. Cook, stirring often, until rice is almost tender, 15 to 20 minutes. Add frozen vegetables and continue cooking until rice is tender and creamy, about 5 minutes.
+        </li>
+        <li>
+            Heat 1/2 cup of canola oil in a nonstick pan over medium heat. Add plantains and fry on both sides until golden and crispy, about 2 to 3 minutes per side. Drain on paper towels. Garnish jollof rice with friend plantains and serve with chicken.
+        </li>
     </ol>
 </body>
 </html>
