--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/brownies.html">Brownies</a>
-    <a href="./recipes/jollof.html">Jollof</a>
-    <a href="./recipes/tuna-sandwich.html">Tuna Sandwich</a>
-    
+    <ul>
+        <li><a href="./recipes/brownies.html">Brownies</a></li>
+        <li><a href="./recipes/jollof.html">Jollof</a></li>
+        <li><a href="./recipes/tuna-sandwich.html">Tuna Sandwich</a></li>
+    </ul>
 </body>
 </html>
